--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.5-rc2
-yarn_mappings=1.21.5-rc2+build.1
-loader_version=0.16.10
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.2
+loader_version=0.16.14
 
 # Mod Properties
-mod_version=1.6
+mod_version=1.7
 maven_group=rs.onako2.metalized
 archives_base_name=metalized
 
 # Dependencies
-fabric_version=0.119.4+1.21.5
+fabric_version=0.128.2+1.21.7
