--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.7
-yarn_mappings=1.21.7+build.2
+minecraft_version=1.21.8-rc1
+yarn_mappings=1.21.8-rc1+build.1
 loader_version=0.16.14
 
 # Mod Properties
